fix postproc svg on firefox

--- a/src/postprocessmatrix.css
+++ b/src/postprocessmatrix.css
@@ -19,7 +19,7 @@ div#postprocmatrix-container {
 }
 
 svg#postprocmatrix {
-  width: fit-content;
+  width: auto;
 }
 
 div#key-postproc {
